linted code with djlint

--- a/templates/pybin/avatar.html
+++ b/templates/pybin/avatar.html
@@ -30,7 +30,9 @@
                         </form>
                     </div>
                     <fieldset class="account_related_pages border rounded border-dark px-2 col-sm-2.5">
-                        <h6>ACCOUNT RELATED PAGES</h3>
+                        <h6>
+                            ACCOUNT RELATED PAGES
+                        </h3>
                         <a class="btn btn-outline-dark" href="/user/profile/">Profile</a>
                         <br>
                         <a class="btn btn-outline-dark" href="/user/password/">Password</a>
