--- a/templates/pybin/password.html
+++ b/templates/pybin/password.html
@@ -14,7 +14,7 @@
             <div class="content col">
                 <div class="content_title">
                     Change Your Password
-                <hr>
+                    <hr>
                 </div>
                 <div class="user_page d-flex">
                     <div class="form_frame_left col-sm-6">
@@ -47,7 +47,9 @@
                         </form>
                     </div>
                     <fieldset class="account_related_pages border rounded border-dark px-2 col-sm-2.5">
-                        <h6>ACCOUNT RELATED PAGES</h3>
+                        <h6>
+                            ACCOUNT RELATED PAGES
+                        </h3>
                         <a class="btn btn-outline-dark" href="/user/profile/">Profile</a>
                         <br>
                         <a class="btn btn-outline-dark" href="/user/password/">Password</a>
@@ -55,7 +57,6 @@
                         <a class="btn btn-outline-dark" href="/user/change-avatar/">Avatar</a>
                         <br>
                     </fieldset>
-
                 </div>
             </div>
             <div class="sidebar col-sm-3">
