--- a/templates/pybin/edit_profile.html
+++ b/templates/pybin/edit_profile.html
@@ -14,7 +14,7 @@
             <div class="content col">
                 <div class="content_title">
                     My Profile
-                <hr>
+                    <hr>
                 </div>
                 <div class="user_page d-flex">
                     <div class="form_frame_left col-sm-6">
@@ -54,7 +54,9 @@
                         </form>
                     </div>
                     <fieldset class="account_related_pages border rounded border-dark px-2 col-sm-2.5">
-                        <h6>ACCOUNT RELATED PAGES</h3>
+                        <h6>
+                            ACCOUNT RELATED PAGES
+                        </h3>
                         <a class="btn btn-outline-dark" href="/user/profile/">Profile</a>
                         <br>
                         <a class="btn btn-outline-dark" href="/user/password/">Password</a>
