--- a/templates/pybin/password.html
+++ b/templates/pybin/password.html
@@ -46,7 +46,7 @@
                             {{ form.submit }}
                         </form>
                     </div>
-                    <fieldset class="account_related_pages border rounded border-dark px-2 col-sm-2.5">
+                    <fieldset style="padding-bottom: 173px" class="account_related_pages border rounded border-dark px-2 col-sm-2.5">
                         <h6>
                             ACCOUNT RELATED PAGES
                         </h3>
