updated resend template title

--- a/templates/authentication/resend.html
+++ b/templates/authentication/resend.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Pybin.com - Change Your Password{% endblock %}
+{% block title %}Pybin.com - Request New Activation Email{% endblock %}
 {% block content %}
     <div class="container">
         <div class="row">
