updated not verified message

--- a/templates/pybin/edit_profile.html
+++ b/templates/pybin/edit_profile.html
@@ -33,8 +33,7 @@
                                 {% if current_user.email_status %}
                                     verified!
                                 {% else %}
-                                    <!-- TODO: Implement Email Verification -->
-                                    not verified! We have sent you an email [ <a href="resend/" resend verification email</a>]
+                                    Not verified! We have sent you an email <div>[ <a href="/resend/"> resend verification email</a> ]</div>
                                 {% endif %}
                             </div>
                             <div>
